--- a/index.html
+++ b/index.html
@@ -5,12 +5,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="stylesheet" href="./CSS/media.css">
     <title>EFood | © Hasanboy Zafarov</title>
 </head>
 
 <body>
+    <header>
+        <div class="container">
+            <div class="header_wrapper">
+                <a href="#" class="site_logo"><span class="color_secondary-span">E</span>Food</a>
+                <ul class="nav_menu">
+                    <li class="nav_item"><a href="#" class="nav_link active">Home</a></li>
+                    <li class="nav_item"><a href="#" class="nav_link">Service</a></li>
+                    <li class="nav_item"><a href="#" class="nav_link">Top cities</a></li>
+                    <li class="nav_item"><a href="#" class="nav_link">Contract</a></li>
+                </ul>
+                <div class="header_tools_wrapper">
+                    <i class="bi bi-search header_icon"></i>
+                    <i class="bi bi-cart3 header_icon header_icon_cart"><span class="offers"></span></i>
+                    <button class="same-style_btn">Sign Up</button>
+                    <div class="toggle_nav_icon header_icon_burger">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <div class="first_section">
+        <div class="container">
+            <div class="first_section_wrapper">
+                <div class="first_section_left">
+                    <p class="first_heading">Super Fast <span class="color_secondary-span">Food <br> Delivery</span>
+                        Services</p>
+                    <p class="same-style_p">
+                        We provide super fast-delivery service. Let's use our <br> services right now and get discounts
+                        of up
+                        to 50%
+                    </p>
+                    <div class="first_btn_wrapper">
+                        <button class="same-style_btn">Exprole Food</button>
+                        <p class="first_link-p">Download app</p>
+                    </div>
+                </div>
+                <div class="first_section_right">
+                    <img src="./img/first_section_right.png" alt="img">
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="./JS/main.js"></script>
 </body>
 
