--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="W3Schools Free Online Web Tutorials">
+    <meta name="Keywords"
+        content="HTML, Python, CSS, SQL, JavaScript, How to, PHP, Java, C, C++, C#, jQuery, Bootstrap, Colors, W3.CSS, XML, MySQL, Icons, Node.js, React, Graphics, Angular, R, AI, Git, Data Science, Code Game, Tutorials, Programming, Web Development, Training, Learning, Quiz, Exercises, Courses, Lessons, References, Examples, Learn to code, Source code, Demos, Tips, Website">
+    <meta name="Description"
+        content="Well organized and easy to understand Web building tutorials with lots of examples of how to use HTML, CSS, JavaScript, SQL, Python, PHP, Bootstrap, Java, XML and more.">
+    <meta property="og:image" content="https://www.w3schools.com/images/w3schools_logo_436_2.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="440">
+    <meta property="og:image:height" content="230">
+    <meta property="og:title" content="W3Schools Free Online Web Tutorials">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="stylesheet" href="./CSS/media.css">
     <title>EFood | © Hasanboy Zafarov</title>
@@ -15,9 +27,9 @@
     <header>
         <div class="container">
             <div class="header_wrapper">
-                <a href="#" class="site_logo"><span class="color_secondary-span">E</span>Food</a>
+                <a href="./index.html" class="site_logo"><span class="color_secondary-span">E</span>Food</a>
                 <ul class="nav_menu">
-                    <li class="nav_item"><a href="#" class="nav_link active">Home</a></li>
+                    <li class="nav_item"><a href="#" class="nav_link">Home</a></li>
                     <li class="nav_item"><a href="#" class="nav_link">Service</a></li>
                     <li class="nav_item"><a href="#" class="nav_link">Top cities</a></li>
                     <li class="nav_item"><a href="#" class="nav_link">Contract</a></li>
@@ -35,6 +47,7 @@
             </div>
         </div>
     </header>
+
     <div class="first_section">
         <div class="container">
             <div class="first_section_wrapper">
@@ -57,7 +70,48 @@
             </div>
         </div>
     </div>
+
+    <div class="second_section">
+        <div class="container">
+            <div class="second_section_wrapper">
+                <p class="second_heading">Our popular <span class="color_secondary-span">Category</span></p>
+                <div class="second_options-wrapper">
+                    <div class="food_option choosed">
+                        <i class="fa-solid fa-burger food_option-icon"></i>
+                        <p class="food_option-content">Burger</p>
+                    </div>
+                    <div class="food_option">
+                        <i class="fa-solid fa-pizza-slice food_option-icon"></i>
+                        <p class="food_option-content">Pizza</p>
+                    </div>
+                    <div class="food_option">
+                        <i class="fa-solid fa-cookie-bite food_option-icon"></i>
+                        <p class="food_option-content">Cookie</p>
+                    </div>
+                    <div class="food_option">
+                        <i class="fa-solid fa-plate-wheat food_option-icon"></i>
+                        <p class="food_option-content">Asian Food</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <div class="progress_bar"></div>
     <script src="./JS/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script src="./JS/swiper.js"></script>
 </body>
 
 </html>
