--- a/index.html
+++ b/index.html
@@ -93,6 +93,60 @@
                         <p class="food_option-content">Asian Food</p>
                     </div>
                 </div>
+                <div class="second_foods_wrapper">
+                    <div class="food_sample">
+                        <img src="./img/cheese-burger.png" alt="img" class="food_sample-img">
+                        <div class="food_sample-star_wrapper">
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                        </div>
+                        <p class="food_sample-name">Cheeseburger With Salad</p>
+                        <p class="food_sample-price">$18.00</p>
+                        <button class="food_sample-cart_btn">Add to cart</button>
+                    </div>
+                    <div class="food_sample">
+                        <img src="./img/cheese-burger.png" alt="img" class="food_sample-img">
+                        <div class="food_sample-star_wrapper">
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                        </div>
+                        <p class="food_sample-name">Cheeseburger With Salad</p>
+                        <p class="food_sample-price">$18.00</p>
+                        <button class="food_sample-cart_btn">Add to cart</button>
+                    </div>
+                    <div class="food_sample">
+                        <img src="./img/cheese-burger.png" alt="img" class="food_sample-img">
+                        <div class="food_sample-star_wrapper">
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                        </div>
+                        <p class="food_sample-name">Cheeseburger With Salad</p>
+                        <p class="food_sample-price">$18.00</p>
+                        <button class="food_sample-cart_btn">Add to cart</button>
+                    </div>
+                    <div class="food_sample">
+                        <img src="./img/cheese-burger.png" alt="img" class="food_sample-img">
+                        <div class="food_sample-star_wrapper">
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                        </div>
+                        <p class="food_sample-name">Cheeseburger With Salad</p>
+                        <p class="food_sample-price">$18.00</p>
+                        <button class="food_sample-cart_btn">Add to cart</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
